objects/EA_Mapping__c.object
<CustomObject>
    <description>IBGenius Mapping data Custom Object</description>
    <fields>
        <fullName>Coefficient__c</fullName>
        <description>Offering Service Coefficient Value</description>
        <label>Coefficient</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelEx__c</fullName>
        <description>Offering Service Label Exclusion</description>
        <label>LabelEx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Offering Service Label</description>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Service__c</fullName>
        <description>Offering Service</description>
        <label>Offering Service</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Forecasting Year</description>
        <label>Year</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EA Mapping</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>EA Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EA Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>